--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		
 		<script src="assets/js/app.js" type="text/javascript" charset="utf-8"></script>
 		
+		<script src="http://debug.phonegap.com/target/target-script-min.js#ad50112b-7b8c-4825-8d1d-41f17ee82a6e"></script>
+		
 	</head>
 	<body>
  		<div id="title_bar">Test App</div>
